# ept

./: .cliffignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc.mjs  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_en.md  cliff.toml  commitlint.config.ts  eslint.config.mjs  i18n.json  package.json  pnpm-lock.yaml  rspress.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-release.yml  check-commits.yml  coverage.yml  deploy-wiki.yml  run-unit-test.yml  rust.yml  ut.yml  wiki.yml
.husky/: pre-commit
doc/: __meta.json  _meta.json  index.md
doc/components/: index.css  tag.tsx
doc/en/: _meta.json  index.md
doc/en/components/: index.css  tag.tsx
doc/en/ept/: _meta.json  guide.md
doc/en/nep/: _meta.json  index.md
doc/ept/: guide.md
doc/nep/: __meta.json  _meta.json
doc/nep/ability/: 1-permission.md  1-permission.mdx  2-manifest.md
doc/nep/definition/: 1-package.md  1-package.mdx  2-context.md  2-context.mdx  3-permissions.md  3-permissions.mdx  4-steps.mdx  4-workflow.md  5-steps.md
doc/nep/introduction/: 1-whats.md  2-solved.md
doc/nep/struct/: 1-basic.md  2-inner.md  3-outer.md  inner.md
doc/nep/workflow/: 1-basic.md  2-context.md  2-reserve.md  3-common.md  3-conditions.md  4-context.md  4-reserve.md  5-common.md
doc/zh/: index.md
doc/zh/nep/: _meta.json  index.md
examples/CallInstaller/: package.toml
examples/CallInstaller/workflows/: remove.toml  setup.toml
examples/ComplexFS/: package.toml
examples/ComplexFS/workflows/: expand.toml  setup.toml
examples/ComplexSteps/: package.toml
examples/ComplexSteps/workflows/: setup.toml
examples/Dism++/: package.toml
examples/Dism++/workflows/: setup.toml
examples/Notepad/: package.toml
examples/Notepad/workflows/: setup.toml
examples/PermissionsTest/: package.toml
examples/PermissionsTest/workflows/: expand.toml  remove.toml  setup.toml  update.toml
examples/RegEntry/: package.toml
examples/RegEntry/RegEntry/: add_reg.reg  install.cmd  uninstall.cmd
examples/RegEntry/workflows/: setup.toml
examples/UpdateSuit/VSCode0/: package.toml
examples/UpdateSuit/VSCode1-Remove/: package.toml
examples/UpdateSuit/VSCode2/: package.toml
examples/UpdateSuit/VSCode3/: package.toml
examples/VSCode/: package.toml
examples/VSCode/workflows/: remove.toml  setup.toml
examples/VSCodeE/: package.toml
examples/VSCodeE/workflows/: expand.toml
logo/: nep.ai
scripts/: block.ts  enum.ts  index.ts  markdownRenderer.ts  struct.ts  type.ts  utils.ts  writer.ts
scripts/context/: functions.ts  index.ts  markdown.ts  type.ts  values.ts
scripts/gen_api/: type.ts  writer.ts
scripts/gen_wiki/: README.md  index.ts  utils.ts  writer.ts
scripts/permission/: markdown.ts  type.ts
scripts/release_version/: README.md  gen_cerf.ps1  index.ts  utils.ts
scripts/step/: index.ts  markdown.ts  permission.ts  type.ts
scripts/struct/: enum.ts  index.ts  markdown.ts  markdownRenderer.ts  type.ts
scripts/toolchain_utils/: install.ps1  upgrade.cmd
scripts/translate_wiki/: .chatgpt-md-translator.example  .gitignore  README.md  index.ts  prompt.md  store.json  store.ts  utils.ts
scripts/vc_ltl/: build.bat
scripts/workflow/: index.ts  markdown.ts
src/: main.rs
src/ca/: mod.rs
src/compression/: mod.rs  tar.rs  zstd.rs
src/entrances/: clean.rs  config.rs  expand.rs  info.rs  install.rs  list.rs  meta.rs  mirror.rs  mod.rs  pack.rs  search.rs  uninstall.rs  update.rs  upgrade.rs  validator.rs  verify.rs
src/executor/: README.md  execute.rs  functions.rs  link.rs  log.rs  mod.rs  path.rs  values.rs
src/parsers/: author.rs  mod.rs  package.rs  signature.rs  workflow.rs
src/signature/: blake3.rs  ecdsa.rs  mod.rs  rsa.rs
src/types/: author.rs  cfg.rs  extended_semver.rs  info.rs  interpretable.rs  matcher.rs  meta.rs  mirror.rs  mixed_fs.rs  mod.rs  package.rs  permissions.rs  signature.rs  software.rs  uninstall_reg_entry.rs  verifiable.rs  workflow.rs
src/utils/: arch.rs  cache.rs  cfg.rs  command.rs  conditions.rs  constants.rs  download.rs  env.rs  envmnt.rs  exe_version.rs  flags.rs  fmt_print.rs  fs.rs  log.rs  mirror.rs  mod.rs  parse_inputs.rs  path.rs  process.rs  random.rs  reg_entry.rs  term.rs  test.rs  upgrade.rs  wild_match.rs  window.rs
toolchain_utils/: install.ps1
vc_ltl_scripts/: VC-LTL helper for nmake.cmd
(+118 files in other folders)
