[package]
name = "ept"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.68"
base64 = "0.21.0"
blake3 = { version = "1.3.3", features = ["rayon"] }
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
console = "0.15.5"
dirs = "4.0.0"
ed25519-compact = "2.0.4"
encoding = "0.2.33"
envmnt = "0.10.4"
evalexpr = "11.0.0"
force-delete-win = "0.1.0"
fs_extra = "1.3.0"
indicatif = "0.17.8"
lazy_static = "1.4.0"
memmap2 = "0.5.8"
notify-rust = "4.8.0"
path-clean = "0.1.0"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.12.4", features = ["blocking","json"] }
rustyline = "10.1.1"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shell-words = "1.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
sysinfo = "0.28.0"
tantivy = "0.22.0"
tar = "0.4.38"
toml = { version = "0.5.11", features = ["preserve_order"] }
trash = "3.0.1"
ts-rs = "6.2.1"
which = "4.4.0"
wildmatch = "2.1.1"
zstd = "0.12.3"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
pelite = "0.10.0"
vc-ltl = "5.0.5"
winapi = "0.3.9"
winreg = "0.10.1"

[dev-dependencies]
rusty-hook = "0.11.2"
