[package]
name = "ept"
version = "0.2.1"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.86"
base64 = "0.22.1"
blake3 = { version = "1.5.3", features = ["rayon"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
dirs = "5.0.1"
ed25519-compact = "2.1.1"
encoding = "0.2.33"
envmnt = "0.10.4"
evalexpr = "11.3.0"
force-delete-win = "0.1.0"
fs_extra = "1.3.0"
humantime = "2.1.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
memmap2 = "0.9.4"
notify-rust = "4.11.0"
path-clean = "1.0.1"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rustyline = "14.0.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shell-words = "1.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
sysinfo = "0.30.13"
tantivy = "0.22.0"
tar = "0.4.41"
toml = { version = "0.8.14", features = ["preserve_order"] }
trash = "5.0.0"
ts-rs = "9.0.1"
url = "2.5.2"
which = "6.0.1"
wildmatch = "2.3.4"
zstd = "0.13.2"
httpmock = "0.7.0"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
pelite = "0.10.0"
vc-ltl = "5.0.9"
winapi = { version = "0.3.9", features = ["winuser", "minwindef"] }
winreg = "0.52.0"
